# tgl

./: CMakeLists.txt  RectanizerSkyline.html  fontpath.hpp  fpstest.cpp  test.cpp  texttest.cpp
glad/: config.txt
glad/include/glad/: gl.h
glwindow/: GLWindow.cpp  GLWindow.h  calculateFPS.h
tgl/: Bitmap.cpp  Bitmap.h  Decoder.cpp  Decoder.h  Font.cpp  Font.h  FontAtlas.cpp  FontAtlas.h  FontFace.cpp  FontFace.h  Geometry.cpp  Geometry.h  Gradient.cpp  Gradient.h  Graphics.cpp  Graphics.h  GraphicsBuffer.cpp  GraphicsBuffer.h  GraphicsRecorder.cpp  GraphicsRecorder.h  GraphicsRenderer.cpp  GraphicsRenderer.h  GraphicsShader.cpp  GraphicsShader.h  GraphicsStructs.h  Image.cpp  Image.h  ImageLoader.cpp  RectanizerSkyline.cpp  RectanizerSkyline.h  RendererBuffer.cpp  RendererBuffer.h  RendererShader.cpp  RendererShader.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
